--- a/frontend/src/less/pages/main/base.less
+++ b/frontend/src/less/pages/main/base.less
@@ -97,13 +97,13 @@
 						display: 				inline-block;
 					}
 					.firstname {
-						left: 					-2000px;
+						visibility:				hidden;
 						color: 					@camoflauge-green;
 						font-weight: 			400;
 						letter-spacing: 		-2px;
 					}
 					.lastname {
-						right: 					-2000px;
+						visibility:				hidden;
 						color: 					@rifle-green;
 						font-weight: 			600;
 						letter-spacing: 		1px;
